--- a/Projects/SpringBoot/githubAnalytics/src/main/resources/templates/dashboard/layout.html
+++ b/Projects/SpringBoot/githubAnalytics/src/main/resources/templates/dashboard/layout.html
@@ -4,10 +4,44 @@
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <html lang="en" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
-
-
+<th:block layout:fragment="script"></th:block>
 <head>
-    <meta charset="utf-8">
+    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+<!--    <script type="text/javascript" th:src="@{/assets/scripts/analytic.js}" />-->
+    <script type="text/javascript" th:inline="javascript">
+
+        // Load the Visualization API and the corechart package.
+        google.charts.load('current', {'packages':['corechart']});
+
+        // Set a callback to run when the Google Visualization API is loaded.
+        google.charts.setOnLoadCallback(drawChart);
+
+        // Callback that creates and populates a data table,
+        // instantiates the pie chart, passes in the data and
+        // draws it.
+        function drawChart() {
+
+            // Create the data table.
+            var data = new google.visualization.DataTable();
+            data.addColumn('string', 'Topping');
+            data.addColumn('number', 'Slices');
+            data.addRows([
+                /*[# th:each="row : ${chartData}"]*/
+                [[${row}]],
+                /*[/]*/
+            ]);
+
+            // Set chart options
+            var options = {'title':'How Much Pizza I Ate Last Night',
+                'width':400,
+                'height':300};
+
+            // Instantiate and draw our chart, passing in some options.
+            var chart = new google.visualization.PieChart(document.getElementById('chart_div'));
+            chart.draw(data, options);
+        }
+    </script>
+      <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta http-equiv="Content-Language" content="en">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
@@ -17,18 +51,10 @@
     <meta name="msapplication-tap-highlight" content="no">
     <link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/3.3.7/css/bootstrap.min.css}" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" rel="stylesheet" type="text/css" />
-    <!--
-    =========================================================
-    * ArchitectUI HTML Theme Dashboard - v1.0.0
-    =========================================================
-    * Product Page: https://dashboardpack.com
-    * Copyright 2019 DashboardPack (https://dashboardpack.com)
-    * Licensed under MIT (https://github.com/DashboardPack/architectui-html-theme-free/blob/master/LICENSE)
-    =========================================================
-    * The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
-    -->
+
     <link rel="stylesheet" href="../static/assets/css/main.css"
           th:href="@{/assets/css/main.css}" />
+
 <body>
 <div class="app-container app-theme-white body-tabs-shadow fixed-sidebar fixed-header">
     <div class="app-header header-shadow">
@@ -442,11 +468,10 @@
                             <i class="metismenu-state-icon pe-7s-angle-down caret-left"></i>
                         </a>
                         <ul>
-                            <li>
-                                <a href="elements-buttons-standard.html">
-                                    <i class="metismenu-icon"></i>
-                                    Buttons
-                                </a>
+                            <li><a th:href="@{/analytic}">
+                                <i class="metismenu-icon"></i>
+                                Analytics
+                            </a>
                             </li>
                             <li>
                                 <a href="elements-dropdowns.html">
@@ -663,9 +688,15 @@
         <script src="http://maps.google.com/maps/api/js?sensor=true"></script>
      </div>
 </div>
-<script type="text/javascript" th:src="@{/webjars/jquery/3.2.1/jquery.min.js/}"></script>
-<script type="text/javascript" th:src="@{/webjars/bootstrap/3.3.7/js/bootstrap.min.js}"></script>
+<!--<script type="text/javascript" th:src="@{/webjars/jquery/3.2.1/jquery.min.js/}"></script>-->
+<!--<script type="text/javascript" th:src="@{/webjars/bootstrap/3.3.7/js/bootstrap.min.js}"></script>-->
+
+<!--<script type="text/javascript" th:src="@{/assets/scripts/analyticsloader.js}" />-->
+<!--<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>-->
 
 <script type="text/javascript" th:src="@{/assets/scripts/main.js}" />
+
+
 </body>
 </html>
+
