--- a/Projects/SpringBoot/githubAnalytics/src/main/resources/templates/dashboard/home.html
+++ b/Projects/SpringBoot/githubAnalytics/src/main/resources/templates/dashboard/home.html
@@ -16,7 +16,8 @@
                 <div class="main-card mb-3 card">
                     <div class="table-responsive" style="height: 600px;overflow: scroll;">
 <!--                        <form th:action="@{/repository}" th:object="${user}"   class="login100-form validate-form p-b-33 p-t-5" method="post">-->
-                        <input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search for names.." title="Type in a name">
+
+                        <input type="text" id="myInput" onkeyup="myFunction()"  placeholder="Type to search for name">
                         <table id="myTable" class="align-middle mb-0 table table-borderless table-striped table-hover">
                             <tr>
                                 <th class="text-center">Id</th>
