--- a/Projects/SpringBoot/githubAnalytics/src/main/resources/templates/dashboard/layout.html
+++ b/Projects/SpringBoot/githubAnalytics/src/main/resources/templates/dashboard/layout.html
@@ -8,7 +8,7 @@
 <head>
     <style>
         #myInput {
-  background-image: url("./searchicon2.png");
+  background-image: url('../images/searchicon2.png');
   background-position: 10px 10px;
   background-repeat: no-repeat;
   width: 100%;
@@ -121,7 +121,7 @@
                 <div class="search-wrapper">
                     <div class="input-holder">
                         <input type="text" class="search-input" placeholder="Type to search">
-                        <button class="search-icon"><span></span></button>
+                        <!--button class="search-icon"><span></span></button-->
                     </div>
                     <button class="close"></button>
                 </div>
@@ -168,7 +168,8 @@
                     </div>
                 </div>        </div>
         </div>
-    </div>        <div class="ui-theme-settings">
+    </div>
+    <div class="ui-theme-settings">
     <button type="button" id="TooltipDemo" class="btn-open-options btn btn-warning">
         <i class="fa fa-cog fa-w-16 fa-spin fa-2x"></i>
     </button>
@@ -198,6 +199,7 @@
                                 </div>
                             </div>
                         </li>
+                        0803 904 4688
                         <li class="list-group-item">
                             <div class="widget-content p-0">
                                 <div class="widget-content-wrapper">
@@ -501,46 +503,11 @@
                                 Analytics
                             </a>
                             </li>
+
                             <li>
-                                <a href="elements-dropdowns.html">
+                                <a th:href="@{/index}">
                                     <i class="metismenu-icon">
-                                    </i>Dropdowns
-                                </a>
-                            </li>
-                            <li>
-                                <a href="elements-icons.html">
-                                    <i class="metismenu-icon">
-                                    </i>Icons
-                                </a>
-                            </li>
-                            <li>
-                                <a href="elements-badges-labels.html">
-                                    <i class="metismenu-icon">
-                                    </i>Badges
-                                </a>
-                            </li>
-                            <li>
-                                <a href="elements-cards.html">
-                                    <i class="metismenu-icon">
-                                    </i>Cards
-                                </a>
-                            </li>
-                            <li>
-                                <a href="elements-list-group.html">
-                                    <i class="metismenu-icon">
-                                    </i>List Groups
-                                </a>
-                            </li>
-                            <li>
-                                <a href="elements-navigation.html">
-                                    <i class="metismenu-icon">
-                                    </i>Navigation Menus
-                                </a>
-                            </li>
-                            <li>
-                                <a href="elements-utilities.html">
-                                    <i class="metismenu-icon">
-                                    </i>Utilities
+                                    </i>Home
                                 </a>
                             </li>
                         </ul>
@@ -558,113 +525,12 @@
                                     </i>Tabs
                                 </a>
                             </li>
-                            <li>
-                                <a href="components-accordions.html">
-                                    <i class="metismenu-icon">
-                                    </i>Accordions
-                                </a>
-                            </li>
-                            <li>
-                                <a href="components-notifications.html">
-                                    <i class="metismenu-icon">
-                                    </i>Notifications
-                                </a>
-                            </li>
-                            <li>
-                                <a href="components-modals.html">
-                                    <i class="metismenu-icon">
-                                    </i>Modals
-                                </a>
-                            </li>
-                            <li>
-                                <a href="components-progress-bar.html">
-                                    <i class="metismenu-icon">
-                                    </i>Progress Bar
-                                </a>
-                            </li>
-                            <li>
-                                <a href="components-tooltips-popovers.html">
-                                    <i class="metismenu-icon">
-                                    </i>Tooltips &amp; Popovers
-                                </a>
-                            </li>
-                            <li>
-                                <a href="components-carousel.html">
-                                    <i class="metismenu-icon">
-                                    </i>Carousel
-                                </a>
-                            </li>
-                            <li>
-                                <a href="components-calendar.html">
-                                    <i class="metismenu-icon">
-                                    </i>Calendar
-                                </a>
-                            </li>
-                            <li>
-                                <a href="components-pagination.html">
-                                    <i class="metismenu-icon">
-                                    </i>Pagination
-                                </a>
-                            </li>
-                            <li>
-                                <a href="components-scrollable-elements.html">
-                                    <i class="metismenu-icon">
-                                    </i>Scrollable
-                                </a>
-                            </li>
-                            <li>
-                                <a href="components-maps.html">
-                                    <i class="metismenu-icon">
-                                    </i>Maps
-                                </a>
-                            </li>
                         </ul>
                     </li>
                     <li  >
                         <a href="tables-regular.html">
                             <i class="metismenu-icon pe-7s-display2"></i>
                             Tables
-                        </a>
-                    </li>
-                    <li class="app-sidebar__heading">Widgets</li>
-                    <li>
-                        <a href="dashboard-boxes.html">
-                            <i class="metismenu-icon pe-7s-display2"></i>
-                            Dashboard Boxes
-                        </a>
-                    </li>
-                    <li class="app-sidebar__heading">Forms</li>
-                    <li>
-                        <a href="forms-controls.html">
-                            <i class="metismenu-icon pe-7s-mouse">
-                            </i>Forms Controls
-                        </a>
-                    </li>
-                    <li>
-                        <a href="forms-layouts.html">
-                            <i class="metismenu-icon pe-7s-eyedropper">
-                            </i>Forms Layouts
-                        </a>
-                    </li>
-                    <li>
-                        <a href="forms-validation.html">
-                            <i class="metismenu-icon pe-7s-pendrive">
-                            </i>Forms Validation
-                        </a>
-                    </li>
-                    <li class="app-sidebar__heading">Charts</li>
-                    <li>
-                        <a href="charts-chartjs.html">
-                            <i class="metismenu-icon pe-7s-graph2">
-                            </i>ChartJS
-                        </a>
-                    </li>
-                    <li class="app-sidebar__heading">PRO Version</li>
-                    <li>
-                        <a href="https://dashboardpack.com/theme-details/architectui-dashboard-html-pro/" target="_blank">
-                            <i class="metismenu-icon pe-7s-graph2">
-                            </i>
-                            Upgrade to PRO
                         </a>
                     </li>
                 </ul>
