--- a/Projects/SpringBoot/githubAnalytics/src/main/resources/templates/dashboard/ahome.html
+++ b/Projects/SpringBoot/githubAnalytics/src/main/resources/templates/dashboard/ahome.html
@@ -35,8 +35,8 @@
                                 <td th:text="${user.mobilephone}">070888888888</td>
                                 <td th:text="${user.email}">sprin@gmail.com</td>
                                 <td th:text="${user.role}">admin</td>
-                                <td><a th:href="@{'/user/edit/' + ${user.email}+'/name/'+${user.firstName}}">Edit</a></td>
-                                <td><a th:href="@{'/user/delete/' + ${user.email}+'/name/'+${user.firstName}}">Delete</a></td>
+                                <td><a th:href="@{'/user/edit/' + ${user.email}+'/role/'+${user.role}}">Edit</a></td>
+                                <td><a th:href="@{'/user/delete/' + ${user.id}}">Delete</a></td>
 <!--                                <td><a th:href="@{'/repository/user/'+${git}+'/name/'+${repo.name}}">Details</a></td>-->
 
                             </tr>
